--- a/.gitattributes
+++ b/.gitattributes
@@ -506,6 +506,7 @@ MAKES/Makefile.def.ALPHA -text
 MAKES/Makefile.def.DATASTAR -text
 MAKES/Makefile.def.EC2-DEBIAN -text
 MAKES/Makefile.def.EC2-FEDORA4 -text
+MAKES/Makefile.def.EC2-REDHAT-ENTERPRISE -text
 MAKES/Makefile.def.EC2-UBUNTU -text
 MAKES/Makefile.def.FEDORA3 -text
 MAKES/Makefile.def.FEDORA4 -text
