--- a/.gitattributes
+++ b/.gitattributes
@@ -496,6 +496,7 @@ EXAMPLES/SmallMP/ReadRecord.tcl -text
 EXAMPLES/SmallMP/analysis.tcl -text
 EXAMPLES/SmallMP/model.tcl -text
 EXAMPLES/SmallMP/qTestMP -text
+EXAMPLES/SmallSP/Example.tcl -text
 EXAMPLES/TclPlaneTruss/Makefile -text
 EXAMPLES/TclPlaneTruss/MyTruss.cpp -text
 EXAMPLES/TclPlaneTruss/MyTruss.h -text
