--- a/.gitattributes
+++ b/.gitattributes
@@ -3306,6 +3306,10 @@ SRC/recorder/MaxNodeDispRecorder.h -text
 SRC/recorder/MaxNodeDispRecorder.tex -text
 SRC/recorder/NodeRecorder.cpp -text
 SRC/recorder/NodeRecorder.h -text
+SRC/recorder/NormElementRecorder.cpp -text
+SRC/recorder/NormElementRecorder.h -text
+SRC/recorder/NormEnvelopeElementRecorder.cpp -text
+SRC/recorder/NormEnvelopeElementRecorder.h -text
 SRC/recorder/PatternRecorder.cpp -text
 SRC/recorder/PatternRecorder.h -text
 SRC/recorder/Recorder.cpp -text
