Adding new reliability examples

--- a/.gitattributes
+++ b/.gitattributes
@@ -423,6 +423,9 @@ EXAMPLES/PlaneFrame/Makefile -text
 EXAMPLES/PlaneFrame/main.cpp -text
 EXAMPLES/PlaneFrame/quick.in -text
 EXAMPLES/README -text
+EXAMPLES/Reliability/bar.tcl -text
+EXAMPLES/Reliability/portalframe.tcl -text
+EXAMPLES/Reliability/trussParameter.tcl -text
 EXAMPLES/ShadowTruss/ActorTruss.cpp -text
 EXAMPLES/ShadowTruss/ActorTruss.h -text
 EXAMPLES/ShadowTruss/ClientMain.cpp -text
