fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -1912,6 +1912,8 @@ SRC/domain/component/DVParameter.h -text
 SRC/domain/component/DomainComponent.cpp -text
 SRC/domain/component/DomainComponent.h -text
 SRC/domain/component/DomainComponent.tex -text
+SRC/domain/component/ElementParameter.cpp -text
+SRC/domain/component/ElementParameter.h -text
 SRC/domain/component/ElementStateParameter.cpp -text
 SRC/domain/component/ElementStateParameter.h -text
 SRC/domain/component/InitialStateParameter.cpp -text
