--- a/.gitattributes
+++ b/.gitattributes
@@ -535,6 +535,7 @@ EXAMPLES/kepler/Example1.xml -text
 MAKES/Makefile.UCDAVIS -text
 MAKES/Makefile.def.ABE -text
 MAKES/Makefile.def.ALPHA -text
+MAKES/Makefile.def.CARTER -text
 MAKES/Makefile.def.DATASTAR -text
 MAKES/Makefile.def.EC2-AMI -text
 MAKES/Makefile.def.EC2-DEBIAN -text
