--- a/.gitattributes
+++ b/.gitattributes
@@ -533,6 +533,7 @@ EXAMPLES/kepler/ARL360.at2 -text
 EXAMPLES/kepler/Example1.tcl -text
 EXAMPLES/kepler/Example1.xml -text
 EXAMPLES/verification/Eigen1.tcl -text
+EXAMPLES/verification/PortalFrame2d.tcl -text
 MAKES/Makefile.UCDAVIS -text
 MAKES/Makefile.def.ABE -text
 MAKES/Makefile.def.ALPHA -text
