--- a/.gitattributes
+++ b/.gitattributes
@@ -532,8 +532,11 @@ EXAMPLES/TeraGridExamples/submit1 -text
 EXAMPLES/kepler/ARL360.at2 -text
 EXAMPLES/kepler/Example1.tcl -text
 EXAMPLES/kepler/Example1.xml -text
-EXAMPLES/verification/Eigen1.tcl -text
+EXAMPLES/verification/EigenFrame.Extra.tcl -text
+EXAMPLES/verification/EigenFrame.tcl -text
 EXAMPLES/verification/PortalFrame2d.tcl -text
+EXAMPLES/verification/runAll.tcl -text
+EXAMPLES/verification/runVerificationSuite.tcl -text
 MAKES/Makefile.UCDAVIS -text
 MAKES/Makefile.def.ABE -text
 MAKES/Makefile.def.ALPHA -text
