--- a/.gitattributes
+++ b/.gitattributes
@@ -534,6 +534,7 @@ EXAMPLES/kepler/Example1.tcl -text
 EXAMPLES/kepler/Example1.xml -text
 EXAMPLES/verification/EigenFrame.Extra.tcl -text
 EXAMPLES/verification/EigenFrame.tcl -text
+EXAMPLES/verification/PlanarTruss.tcl -text
 EXAMPLES/verification/PortalFrame2d.tcl -text
 EXAMPLES/verification/runVerificationSuite.tcl -text
 MAKES/Makefile.UCDAVIS -text
