fmk - code for more examples

--- a/.gitattributes
+++ b/.gitattributes
@@ -536,6 +536,8 @@ EXAMPLES/verification/EigenFrame.Extra.tcl -text
 EXAMPLES/verification/EigenFrame.tcl -text
 EXAMPLES/verification/PlanarTruss.tcl -text
 EXAMPLES/verification/PortalFrame2d.tcl -text
+EXAMPLES/verification/ReadRecord.tcl -text
+EXAMPLES/verification/elCentro.at2 -text
 EXAMPLES/verification/runVerificationSuite.tcl -text
 EXAMPLES/verification/sdofTransient.tcl -text
 MAKES/Makefile.UCDAVIS -text
