--- a/.gitattributes
+++ b/.gitattributes
@@ -2545,6 +2545,8 @@ SRC/element/zeroLength/ZeroLengthContact3D.cpp -text
 SRC/element/zeroLength/ZeroLengthContact3D.h -text
 SRC/element/zeroLength/ZeroLengthContactNTS2D.cpp -text
 SRC/element/zeroLength/ZeroLengthContactNTS2D.h -text
+SRC/element/zeroLength/ZeroLengthImpact3D.cpp -text
+SRC/element/zeroLength/ZeroLengthImpact3D.h -text
 SRC/element/zeroLength/ZeroLengthInterface2D.cpp -text
 SRC/element/zeroLength/ZeroLengthInterface2D.h -text
 SRC/element/zeroLength/ZeroLengthND.cpp -text
