K. Ishii and M. Kikuchi - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -3030,6 +3030,8 @@ SRC/material/uniaxial/InitStrainMaterial.cpp -text
 SRC/material/uniaxial/InitStrainMaterial.h -text
 SRC/material/uniaxial/InitStressMaterial.cpp -text
 SRC/material/uniaxial/InitStressMaterial.h -text
+SRC/material/uniaxial/KikuchiAikenHDR.cpp -text
+SRC/material/uniaxial/KikuchiAikenHDR.h -text
 SRC/material/uniaxial/Makefile -text
 SRC/material/uniaxial/Maxwell.cpp -text
 SRC/material/uniaxial/Maxwell.h -text
