--- a/.gitattributes
+++ b/.gitattributes
@@ -2214,6 +2214,8 @@ SRC/element/NewElement.h -text
 SRC/element/PFEMElement/Makefile -text
 SRC/element/PFEMElement/PFEMElement2D.cpp -text
 SRC/element/PFEMElement/PFEMElement2D.h -text
+SRC/element/PFEMElement/PFEMElement3D.cpp -text
+SRC/element/PFEMElement/PFEMElement3D.h -text
 SRC/element/PFEMElement/PFEMMesher2D.cpp -text
 SRC/element/PFEMElement/PFEMMesher2D.h -text
 SRC/element/PFEMElement/PFEMMesher3D.cpp -text
