--- a/.gitattributes
+++ b/.gitattributes
@@ -3127,6 +3127,8 @@ SRC/material/uniaxial/Steel02Thermal.cpp -text
 SRC/material/uniaxial/Steel02Thermal.h -text
 SRC/material/uniaxial/Steel03.cpp -text
 SRC/material/uniaxial/Steel03.h -text
+SRC/material/uniaxial/SteelBRB.cpp -text
+SRC/material/uniaxial/SteelBRB.h -text
 SRC/material/uniaxial/SteelMP.cpp -text
 SRC/material/uniaxial/SteelMP.h -text
 SRC/material/uniaxial/TclHyperbolicGapMaterial.cpp -text
