Quan Gu and Zhijian Qiu - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -2685,6 +2685,8 @@ SRC/material/nD/BeamFiberMaterial.h -text
 SRC/material/nD/BeamFiberMaterial2d.cpp -text
 SRC/material/nD/BeamFiberMaterial2d.h -text
 SRC/material/nD/BidirectionalMaterial.tex -text
+SRC/material/nD/CapPlasticity.cpp -text
+SRC/material/nD/CapPlasticity.h -text
 SRC/material/nD/ConcreteMcftNonLinear5.cpp -text
 SRC/material/nD/ConcreteMcftNonLinear5.h -text
 SRC/material/nD/ConcreteMcftNonLinear7.cpp -text
