Adding PFEM bubble element

--- a/.gitattributes
+++ b/.gitattributes
@@ -2207,6 +2207,8 @@ SRC/element/NewElement.h -text
 SRC/element/PFEMElement/Makefile -text
 SRC/element/PFEMElement/PFEMElement2D.cpp -text
 SRC/element/PFEMElement/PFEMElement2D.h -text
+SRC/element/PFEMElement/PFEMElement2DBubble.cpp -text
+SRC/element/PFEMElement/PFEMElement2DBubble.h -text
 SRC/element/PFEMElement/PFEMElement3D.cpp -text
 SRC/element/PFEMElement/PFEMElement3D.h -text
 SRC/element/PFEMElement/PFEMMesher2D.cpp -text
