Adding PFEM compressible element

--- a/.gitattributes
+++ b/.gitattributes
@@ -2209,6 +2209,8 @@ SRC/element/PFEMElement/PFEMElement2D.cpp -text
 SRC/element/PFEMElement/PFEMElement2D.h -text
 SRC/element/PFEMElement/PFEMElement2DBubble.cpp -text
 SRC/element/PFEMElement/PFEMElement2DBubble.h -text
+SRC/element/PFEMElement/PFEMElement2DCompressible.cpp -text
+SRC/element/PFEMElement/PFEMElement2DCompressible.h -text
 SRC/element/PFEMElement/PFEMElement3D.cpp -text
 SRC/element/PFEMElement/PFEMElement3D.h -text
 SRC/element/PFEMElement/PFEMMesher2D.cpp -text
