ZhiJian Qiu - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -232,6 +232,10 @@ EXAMPLES/DatastarExamples/Example1.tcl -text
 EXAMPLES/DatastarExamples/README -text
 EXAMPLES/DatastarExamples/submit1 -text
 EXAMPLES/DeveloperTestScripts/BiaxialConcrete_matTest.tcl -text
+EXAMPLES/DeveloperTestScripts/Cap.tcl -text
+EXAMPLES/DeveloperTestScripts/PlaneStressSimplifiedJ2.tcl -text
+EXAMPLES/DeveloperTestScripts/SimplifiedJ2.tcl -text
+EXAMPLES/DeveloperTestScripts/SteelBRB.tcl -text
 EXAMPLES/DeveloperTestScripts/ZeroLengthImpact3D_test.tcl -text
 EXAMPLES/DeveloperTestScripts/cyclicDisp.dat -text
 EXAMPLES/DeveloperTestScripts/cyclicForce.dat -text
